--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "npm install && npx jsc"
+
   },
   "keywords": [],
   "author": "",
